--- a/webserver/public/mediastream/index.html
+++ b/webserver/public/mediastream/index.html
@@ -1,12 +1,26 @@
 <html>
-
-	<head>
-			<title>WebRTC capture video and audio</title>
-	</head>
 	
-	<body>
-			<video autoplay playsinline id="player"> </video>
-			<script src="./js/client.js"></script>
-	</body>
+		<head>
+			<title> webrtc:audio  video devices infor </title>
+		</head>
+	
+		<body>
+			<div>
+				<label>"audio input devices"</label>
+				<select id="audioSource"></select>
+			</div>
 
+			<div>
+				<label>"audio output devices"</label>
+				<select id="audioOutput"></select>
+			</div>
+
+			<div>
+				<label>"video input devices"</label>
+				<select id="videoSource"></select>
+			</div>
+			<video autoplay playsinline id="player"> </video>
+			<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+			<script src="./js/client.js"></script>
+		</body>
 </html>
