--- a/webserver/public/mediastream/index.html
+++ b/webserver/public/mediastream/index.html
@@ -2,6 +2,25 @@
 	
 		<head>
 			<title> webrtc:audio  video devices infor </title>
+			
+			<style>  
+				.none{
+					-webkit-filter:none;
+				}
+				.blur{
+					-webkit-filter:blur(3px);
+				}
+				.grayscale{
+					-webkit-filter:grayscale(1);
+				}
+				.invert{
+					-webkit-filter:invert(1);
+					
+				}
+				.sepia{
+					-webkit-filter:sepia(1);
+				}
+			</style>
 		</head>
 	
 		<body>
@@ -19,6 +38,17 @@
 				<label>"video input devices"</label>
 				<select id="videoSource"></select>
 			</div>
+			<div>
+				<label>"Filter:"</label>
+				<select id="filter">
+						<option value="none"> None  </option>
+						<option value="blur"> Blur  </option>
+						<option value="grayscale"> Grayscale  </option>
+						<option value="invert"> Invert  </option>
+						<option value="sepia"> Sepia  </option>
+				</select>
+			</div>
+			
 			<video autoplay playsinline id="player"> </video>
 			<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 			<script src="./js/client.js"></script>
