--- a/webserver/public/mediastream/index.html
+++ b/webserver/public/mediastream/index.html
@@ -49,7 +49,23 @@
 				</select>
 			</div>
 			
-			<video autoplay playsinline id="player"> </video>
+			<div>
+				<audio autoplay controls id="audioplayer"> </audio>
+				<table>
+					<tr>
+						<td> <video autoplay playsinline id="player"> </video> </td>
+						<td> <div id='constraints' class='output'> </div><td>
+					</tr>
+				</table>
+			</div>
+			
+			<div>
+				<button id = "snapshot">Take snapshot </button>
+			</div>
+			<div>
+				<canvas id="picture">  </canvas>
+			</div>
+			
 			<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 			<script src="./js/client.js"></script>
 		</body>
