--- a/webserver/public/mediastream/index.html
+++ b/webserver/public/mediastream/index.html
@@ -54,7 +54,13 @@
 				<table>
 					<tr>
 						<td> <video autoplay playsinline id="player"> </video> </td>
+						<td> <video  playsinline id="recplayer"> </video> </td>
 						<td> <div id='constraints' class='output'> </div><td>
+					</tr>
+					<tr> 
+						<td><button id="record">开始录制</button></td>
+						<td><button id="recplay" disabled> "播放"</button></td>
+						<td><button id="download" disabled> "下载"</button></td>
 					</tr>
 				</table>
 			</div>
